--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -1,36 +1,65 @@
-title=Works & Services
-menu.welcome=Welcome
-menu.offers=Offers
-menu.requests=Requests
-menu.deposit=Placing an ad
-menu.account=My account
-menu.validation=Validation
-menu.users=Users
-menu.profile=Profile
-menu.preferences=Preferences
-menu.legal.information=Legal Information
-menu.about=About Us
-menu.rules.broadcasts=Rules broadcasts
-menu.terms=Terms & Conditions
-submenu.my.account=My account
-submenu.administration=Administration
-submenu.abount=Timely
-input.keyword.optional=Keyword(s) key(s) - optional
-input.categories=Categories
-input.regions=Régions
-input.city=City or postal code
+ad.category=Activity
+ad.city=City
+ad.description=Description
+ad.location=Location
+ad.price=Price
+ad.region=Region
+ad.remuneration=Remuneration
+ad.title=Title
+ad.type=Type
+button.change=Change
+button.save=Save
 button.search=Search
+button.validate=Validate
+confirmation.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
+confirmation.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
+create.account=Create your account
+forgot.password=Forgot your password?
+gender.mr=Mr.
+gender.mrs=Mrs.
+gender.ms=Ms.
+input.categories=Activities
+input.city=City/Zip Code
+input.division=Region/Department
+input.keyword.optional=Keyword(s) key(s) - optional
+input.remuneration=Remuneration
+menu.about=About Us
+menu.account=My account
+menu.deposit=Placing an ad
+menu.home=Welcome
+menu.information=Legal Information
+menu.offers=Offers
+menu.preferences=Preferences
+menu.profile=Profile
+menu.requests=Requests
+menu.rules=Rules broadcasts
+menu.terms=Terms & Conditions
+menu.users=Users
+menu.validation=Validation
+remuneration.day.short=Day
+remuneration.day=at day
+remuneration.exchange.short=Exchange
+remuneration.exchange=exchange
+remuneration.part.short=Parts
+remuneration.part=parts
+remuneration.task.short=Task
+remuneration.task=a task
+remuneration.time.short=Time
+remuneration.time=time
+submenu.abount=Timely
+submenu.administration=Administration
+submenu.my.account=My account
+title=Works & Services
 user.email=Email
+user.firstName=FirstName
+user.gender=Gender
+user.individual=Individual
+user.lastName.description=Or company name
+user.lastName=LastName
 user.password=Password
-user.create.account=Create your account
-user.forgot.password=Forgot your password?
-rate.time=Time
-rate.day=At day
-rate.task=A task
-rate.part=Parts
-rate.exchange=Exchange
-rate.time.short=Time
-rate.day.short=Day
-rate.task.short=Task
-rate.part.short=Parts
-rate.exchange.short=Exchange
+user.phone=Phone
+user.picture=Picture
+user.professional=Professional
+user.role=Role
+validator.email=the e-mail address is not valid
+validator.notNull=can not be null
