--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -1,36 +1,65 @@
-title=Travaux & Services
-menu.welcome=Accueil
-menu.offers=Offres
-menu.requests=Demandes
-menu.deposit=Déposer une annonce
-menu.account=Mon compte
-menu.validation=Validation
-menu.users=Utilisateurs
-menu.profile=Profile
-menu.preferences=Préférences
-menu.legal.information=Infos légales
-menu.about=Qui sommes-nous
-menu.rules.broadcasts=Règles de diffusions
-menu.terms=Conditions Générales
-submenu.my.account=Mon compte
-submenu.administration=Administration
-submenu.abount=À propos
-input.keyword.optional=Mot(s) clé(s) - optionnel
-input.categories=Catégories
-input.regions=Régions
-input.city=Villes ou codes postaux
+ad.category=Activité
+ad.city=Ville
+ad.description=Description
+ad.location=Localisation
+ad.price=Tarif
+ad.region=Région
+ad.remuneration=Rémunération
+ad.title=Titre
+ad.type=Type
+button.change=Modifier
+button.save=Sauvegarder
 button.search=Chercher
+button.validate=Valider
+confirmation.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
+confirmation.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
+create.account=Créez votre compte
+forgot.password=Mot de passe oublié ?
+gender.mr=M.
+gender.mrs=Mme
+gender.ms=Mlle.
+input.categories=Activités
+input.city=Ville/Code postal
+input.division=Région/Département
+input.keyword.optional=Mot(s) clé(s) - optionnel
+input.remuneration=Rémunération
+menu.about=Qui sommes-nous
+menu.account=Mon compte
+menu.deposit=Déposer une annonce
+menu.home=Accueil
+menu.information=Infos légales
+menu.offers=Offres
+menu.preferences=Préférences
+menu.profile=Profile
+menu.requests=Demandes
+menu.rules=Règles de diffusions
+menu.terms=Conditions Générales
+menu.users=Utilisateurs
+menu.validation=Validation
+remuneration.day.short=Journée
+remuneration.day=à la journée
+remuneration.exchange.short=Echange
+remuneration.exchange=échange
+remuneration.part.short=Pièces
+remuneration.part=aux pièces
+remuneration.task.short=Tâche
+remuneration.task=à la tâche
+remuneration.time.short=Heure
+remuneration.time=de l'heure
+submenu.abount=À propos
+submenu.administration=Administration
+submenu.my.account=Mon compte
+title=Travaux & Services
 user.email=Email
+user.firstName=Prénom
+user.gender=Civilité
+user.individual=Particulier
+user.lastName.description=Ou raison sociale
+user.lastName=Nom
 user.password=Mot de passe
-user.create.account=Créez votre compte
-user.forgot.password=Mot de passe oublié ?
-rate.time=De l'heure
-rate.day=A la journée
-rate.task=A la tâche
-rate.part=Aux pièces
-rate.exchange=Echange
-rate.time.short=Heure
-rate.day.short=Journée
-rate.task.short=Tâche
-rate.part.short=Pièces
-rate.exchange.short=Echange
+user.phone=Téléphone
+user.picture=Image
+user.professional=Professionnel
+user.role=Rôle
+validator.email=l'adresse e-mail n'est pas valide
+validator.notNull=ne peut pas être nul
