--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -1,5 +1,6 @@
 ad.category=Activity
 ad.city=City
+ad.created=Created
 ad.description=Description
 ad.location=Location
 ad.price=Price
@@ -7,13 +8,15 @@ ad.region=Region
 ad.remuneration=Remuneration
 ad.title=Title
 ad.type=Type
+ad.user=User
+ad.validated=Validated
 button.change=Change
 button.save=Save
 button.search=Search
 button.validate=Validate
-confirmation.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
-confirmation.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
 create.account=Create your account
+date.today=Today
+date.yesterday=Yesterday
 forgot.password=Forgot your password?
 gender.mr=Mr.
 gender.mrs=Mrs.
@@ -36,6 +39,22 @@ menu.rules=Rules broadcasts
 menu.terms=Terms & Conditions
 menu.users=Users
 menu.validation=Validation
+message.ad.online.subject=Votre annonce «{0}» est en ligne
+message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
+message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
+message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
+published.by=By
+published=Published
+rating.above=Above average
+rating.advice=Advice
+rating.availability=Availability
+rating.average=Average
+rating.below=Below average
+rating.excellent=Excellent
+rating.poor=Poor
+rating.price=Quality / Price
+rating.quality=Quality of service
+rating.reception=Reception
 remuneration.day.short=Day
 remuneration.day=at day
 remuneration.exchange.short=Exchange
@@ -50,6 +69,7 @@ submenu.abount=Timely
 submenu.administration=Administration
 submenu.my.account=My account
 title=Works & Services
+user.created=Created
 user.email=Email
 user.firstName=FirstName
 user.gender=Gender
@@ -61,5 +81,6 @@ user.phone=Phone
 user.picture=Picture
 user.professional=Professional
 user.role=Role
+user.validated=Validated
 validator.email=the e-mail address is not valid
 validator.notNull=can not be null
