--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -1,47 +1,66 @@
-ad.category=Activité
+ad.category=Activit\u00e9
 ad.city=Ville
+ad.created=Cr\u00e9\u00e9
 ad.description=Description
 ad.location=Localisation
 ad.price=Tarif
-ad.region=Région
-ad.remuneration=Rémunération
+ad.region=R\u00e9gion
+ad.remuneration=R\u00e9mun\u00e9ration
 ad.title=Titre
 ad.type=Type
+ad.user=Utilisateur
+ad.validated=Valid\u00e9
 button.change=Modifier
 button.save=Sauvegarder
 button.search=Chercher
 button.validate=Valider
-confirmation.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
-confirmation.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
-create.account=Créez votre compte
-forgot.password=Mot de passe oublié ?
+create.account=Cr\u00e9ez votre compte
+date.today=Aujourd'hui
+date.yesterday=Hier
+forgot.password=Mot de passe oubli\u00e9 ?
 gender.mr=M.
 gender.mrs=Mme
 gender.ms=Mlle.
-input.categories=Activités
+input.categories=Activit\u00e9s
 input.city=Ville/Code postal
-input.division=Région/Département
-input.keyword.optional=Mot(s) clé(s) - optionnel
-input.remuneration=Rémunération
+input.division=R\u00e9gion/D\u00e9partement
+input.keyword.optional=Mot(s) cl\u00e9(s) - optionnel
+input.remuneration=R\u00e9mun\u00e9ration
 menu.about=Qui sommes-nous
 menu.account=Mon compte
-menu.deposit=Déposer une annonce
+menu.deposit=D\u00e9poser une annonce
 menu.home=Accueil
-menu.information=Infos légales
+menu.information=Infos l\u00e9gales
 menu.offers=Offres
-menu.preferences=Préférences
+menu.preferences=Pr\u00e9f\u00e9rences
 menu.profile=Profile
 menu.requests=Demandes
-menu.rules=Règles de diffusions
-menu.terms=Conditions Générales
+menu.rules=R\u00e8gles de diffusions
+menu.terms=Conditions G\u00e9n\u00e9rales
 menu.users=Utilisateurs
 menu.validation=Validation
-remuneration.day.short=Journée
-remuneration.day=à la journée
+message.ad.online.subject=Votre annonce «{0}» est en ligne
+message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
+message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
+message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous \u00eatre enregistr\u00e9 sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
+published.by=Par
+published=Publi\u00e9 le
+rating.above=Bien
+rating.advice=Conseils
+rating.availability=Disponibilit\u00e9
+rating.average=Moyen
+rating.below=Passable
+rating.excellent=Excellent
+rating.poor=M\u00e9diocre
+rating.price=Rapport Qualit\u00e9 / Prix
+rating.quality=Qualit\u00e9 de la prestation
+rating.reception=Accueil
+remuneration.day.short=Journ\u00e9e
+remuneration.day=à la journ\u00e9e
 remuneration.exchange.short=Echange
-remuneration.exchange=échange
-remuneration.part.short=Pièces
-remuneration.part=aux pièces
+remuneration.exchange=\u00e9change
+remuneration.part.short=Pi\u00e8ces
+remuneration.part=aux pi\u00e8ces
 remuneration.task.short=Tâche
 remuneration.task=à la tâche
 remuneration.time.short=Heure
@@ -50,16 +69,18 @@ submenu.abount=À propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
 title=Travaux & Services
+user.created=Cr\u00e9\u00e9
 user.email=Email
-user.firstName=Prénom
-user.gender=Civilité
+user.firstName=Pr\u00e9nom
+user.gender=Civilit\u00e9
 user.individual=Particulier
 user.lastName.description=Ou raison sociale
 user.lastName=Nom
 user.password=Mot de passe
-user.phone=Téléphone
+user.phone=T\u00e9l\u00e9phone
 user.picture=Image
 user.professional=Professionnel
 user.role=Rôle
+user.validated=Valid\u00e9
 validator.email=l'adresse e-mail n'est pas valide
-validator.notNull=ne peut pas être nul
+validator.notNull=ne peut pas \u00eatre nul
