--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -14,6 +14,8 @@ button.change=Change
 button.save=Save
 button.search=Search
 button.validate=Validate
+Connection.remember=Remember me
+Connection.signin=Sign in
 create.account=Create your account
 date.today=Today
 date.yesterday=Yesterday
