--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -14,6 +14,8 @@ button.change=Modifier
 button.save=Sauvegarder
 button.search=Chercher
 button.validate=Valider
+Connection.remember=Se souvenir de moi
+Connection.signin=Se connecter
 create.account=Cr\u00e9ez votre compte
 date.today=Aujourd'hui
 date.yesterday=Hier
