--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -10,6 +10,7 @@ ad.title=Title
 ad.type=Type
 ad.user=User
 ad.validated=Validated
+button.cancel=Cancel
 button.change=Change
 button.save=Save
 button.search=Search
@@ -41,6 +42,8 @@ menu.rules=Rules broadcasts
 menu.terms=Terms & Conditions
 menu.users=Users
 menu.validation=Validation
+message.about=A propos de Travaux et Services
+message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
 message.ad.online.subject=Votre annonce «{0}» est en ligne
 message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
@@ -57,6 +60,7 @@ rating.poor=Poor
 rating.price=Quality / Price
 rating.quality=Quality of service
 rating.reception=Reception
+registration=Registration
 remuneration.day.short=Day
 remuneration.day=at day
 remuneration.exchange.short=Exchange
