--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -10,6 +10,7 @@ ad.title=Titre
 ad.type=Type
 ad.user=Utilisateur
 ad.validated=Valid\u00e9
+button.cancel=Annuler
 button.change=Modifier
 button.save=Sauvegarder
 button.search=Chercher
@@ -41,6 +42,8 @@ menu.rules=R\u00e8gles de diffusions
 menu.terms=Conditions G\u00e9n\u00e9rales
 menu.users=Utilisateurs
 menu.validation=Validation
+message.about=A propos de Travaux et Services
+message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
 message.ad.online.subject=Votre annonce «{0}» est en ligne
 message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
@@ -57,6 +60,7 @@ rating.poor=M\u00e9diocre
 rating.price=Rapport Qualit\u00e9 / Prix
 rating.quality=Qualit\u00e9 de la prestation
 rating.reception=Accueil
+registration=Inscription
 remuneration.day.short=Journ\u00e9e
 remuneration.day=à la journ\u00e9e
 remuneration.exchange.short=Echange
