--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -44,6 +44,7 @@ menu.users=Utilisateurs
 menu.validation=Validation
 message.about=A propos de Travaux et Services
 message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
+message.email.address.already.exists=Un compte correspondant à cette adresse e-mail existe déjà
 message.ad.online.subject=Votre annonce «{0}» est en ligne
 message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
