--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -12,11 +12,16 @@ ad.user=User
 ad.validated=Validated
 button.cancel=Cancel
 button.change=Change
+button.contact=Contact by email
+button.edit=Edit
+button.phone=View phone
 button.save=Save
 button.search=Search
 button.validate=Validate
-Connection.remember=Remember me
-Connection.signin=Sign in
+check.newsletter=Free sign up to the newsletter travauxetservices.fr
+check.terms=I have read and agree to the terms and conditions
+connection.remember=Remember me
+connection.signin=Sign in
 create.account=Create your account
 date.today=Today
 date.yesterday=Yesterday
@@ -76,18 +81,20 @@ submenu.abount=Timely
 submenu.administration=Administration
 submenu.my.account=My account
 title=Works & Services
+user.confirmation=Confirmation
 user.created=Created
 user.email=Email
 user.firstName=FirstName
 user.gender=Gender
 user.individual=Individual
-user.lastName.description=Or company name
-user.lastName=LastName
+user.lastname.description=Or company name
+user.lastname=LastName
 user.password=Password
 user.phone=Phone
 user.picture=Picture
 user.professional=Professional
+user.professional.question=Are you a professional?
 user.role=Role
 user.validated=Validated
-validator.email=the e-mail address is not valid
-validator.notNull=can not be null
+validator.email=The e-mail address is not valid
+validator.notNull=Can not be null
