--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -12,11 +12,16 @@ ad.user=Utilisateur
 ad.validated=Valid\u00e9
 button.cancel=Annuler
 button.change=Modifier
+button.contact=Contacter par email
+button.edit=Editer
+button.phone=Afficher le téléphone
 button.save=Sauvegarder
 button.search=Chercher
 button.validate=Valider
-Connection.remember=Se souvenir de moi
-Connection.signin=Se connecter
+check.newsletter=Je m'inscris gratuitement à la newsletter de travauxetservices.fr
+check.terms=J'ai lu et j'accepte les conditions générales
+connection.remember=Se souvenir de moi
+connection.signin=Se connecter
 create.account=Cr\u00e9ez votre compte
 date.today=Aujourd'hui
 date.yesterday=Hier
@@ -76,18 +81,20 @@ submenu.abount=À propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
 title=Travaux & Services
+user.confirmation=Confirmation
 user.created=Cr\u00e9\u00e9
 user.email=Email
 user.firstName=Pr\u00e9nom
 user.gender=Civilit\u00e9
 user.individual=Particulier
-user.lastName.description=Ou raison sociale
-user.lastName=Nom
+user.lastname.description=Ou raison sociale
+user.lastname=Nom
 user.password=Mot de passe
 user.phone=T\u00e9l\u00e9phone
 user.picture=Image
 user.professional=Professionnel
+user.professional.question=Etes-vous un professionnel ?
 user.role=Rôle
 user.validated=Valid\u00e9
-validator.email=l'adresse e-mail n'est pas valide
-validator.notNull=ne peut pas \u00eatre nul
+validator.email=L''adresse e-mail n''est pas valide
+validator.notNull=Ne peut pas \u00eatre nul
