--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -19,7 +19,7 @@ button.save=Save
 button.search=Search
 button.validate=Validate
 check.newsletter=Free sign up to the newsletter travauxetservices.fr
-check.terms=I have read and agree to the terms and conditions
+check.terms=I have read and agree the <a href="/#!terms">terms and conditions</a>
 connection.remember=Remember me
 connection.signin=Sign in
 create.account=Create your account
@@ -36,6 +36,7 @@ input.keyword.optional=Keyword(s) key(s) - optional
 input.remuneration=Remuneration
 menu.about=About Us
 menu.account=My account
+menu.configuration=Configuration
 menu.deposit=Placing an ad
 menu.home=Welcome
 menu.information=Legal Information
@@ -96,5 +97,7 @@ user.professional=Professional
 user.professional.question=Are you a professional?
 user.role=Role
 user.validated=Validated
+validator.confirm.password=confirmation should be identical to the password
 validator.email=The e-mail address is not valid
-validator.notNull=Can not be null
+validator.required=this field is required
+validator.terms=You must accept the terms and conditions
