--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -19,7 +19,7 @@ button.save=Sauvegarder
 button.search=Chercher
 button.validate=Valider
 check.newsletter=Je m'inscris gratuitement à la newsletter de travauxetservices.fr
-check.terms=J'ai lu et j'accepte les conditions générales
+check.terms=J'ai lu et j'accepte les <a href="/#!terms">conditions générales</a>
 connection.remember=Se souvenir de moi
 connection.signin=Se connecter
 create.account=Cr\u00e9ez votre compte
@@ -36,6 +36,7 @@ input.keyword.optional=Mot(s) cl\u00e9(s) - optionnel
 input.remuneration=R\u00e9mun\u00e9ration
 menu.about=Qui sommes-nous
 menu.account=Mon compte
+menu.configuration=Configuration
 menu.deposit=D\u00e9poser une annonce
 menu.home=Accueil
 menu.information=Infos l\u00e9gales
@@ -96,5 +97,7 @@ user.professional=Professionnel
 user.professional.question=Etes-vous un professionnel ?
 user.role=Rôle
 user.validated=Valid\u00e9
-validator.email=L''adresse e-mail n''est pas valide
-validator.notNull=Ne peut pas \u00eatre nul
+validator.confirm.password=la confirmation doit être identique au mot de passe
+validator.email=l''adresse e-mail n''est pas valide
+validator.required=ce champ est obligatoire
+validator.terms=Vous devez accepter les conditions générales
