--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -10,13 +10,17 @@ ad.title=Title
 ad.type=Type
 ad.user=User
 ad.validated=Validated
+application.title=Works & Services
+application.title.logo=<strong>Works</strong> and <strong>Services</strong>
 button.cancel=Cancel
 button.change=Change
 button.contact=Contact by email
 button.edit=Edit
 button.phone=View phone
+button.registration=Free registration
 button.save=Save
 button.search=Search
+button.send=Send
 button.validate=Validate
 check.newsletter=Free sign up to the newsletter travauxetservices.fr
 check.terms=I have read and agree the <a href="/#!terms">terms and conditions</a>
@@ -25,6 +29,7 @@ connection.signin=Sign in
 create.account=Create your account
 date.today=Today
 date.yesterday=Yesterday
+forgot.label=Please enter your email address below to immediately receive a temporary password.
 forgot.password=Forgot your password?
 gender.mr=Mr.
 gender.mrs=Mrs.
@@ -67,7 +72,6 @@ rating.poor=Poor
 rating.price=Quality / Price
 rating.quality=Quality of service
 rating.reception=Reception
-registration=Registration
 remuneration.day.short=Day
 remuneration.day=at day
 remuneration.exchange.short=Exchange
@@ -78,10 +82,11 @@ remuneration.task.short=Task
 remuneration.task=a task
 remuneration.time.short=Time
 remuneration.time=time
+sign.in=Sign In
+sign.out=Sign Out
 submenu.abount=Timely
 submenu.administration=Administration
 submenu.my.account=My account
-title=Works & Services
 user.confirmation=Confirmation
 user.created=Created
 user.email=Email
@@ -101,3 +106,7 @@ validator.confirm.password=confirmation should be identical to the password
 validator.email=The e-mail address is not valid
 validator.required=this field is required
 validator.terms=You must accept the terms and conditions
+window.connection=Connection
+window.contact=Message
+window.forgot=Forgot your password
+window.registration=Registration
