--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -10,21 +10,26 @@ ad.title=Titre
 ad.type=Type
 ad.user=Utilisateur
 ad.validated=Valid\u00e9
+application.title=Travaux & Services
+application.title.logo=<strong>Travaux</strong> et <strong>Services</strong>
 button.cancel=Annuler
 button.change=Modifier
 button.contact=Contacter par email
 button.edit=Editer
 button.phone=Afficher le téléphone
+button.registration=Inscription gratuite
 button.save=Sauvegarder
 button.search=Chercher
+button.send=Envoyer
 button.validate=Valider
-check.newsletter=Je m'inscris gratuitement à la newsletter de travauxetservices.fr
-check.terms=J'ai lu et j'accepte les <a href="/#!terms">conditions générales</a>
+check.newsletter=Je m''inscris gratuitement à la newsletter de travauxetservices.fr
+check.terms=J''ai lu et j''accepte les <a href="/#!terms">conditions générales</a>
 connection.remember=Se souvenir de moi
 connection.signin=Se connecter
 create.account=Cr\u00e9ez votre compte
-date.today=Aujourd'hui
+date.today=Aujourd''hui
 date.yesterday=Hier
+forgot.label=Veuillez entrer votre adresse email ci-dessous pour recevoir immédiatement un mot de passe temporaire.
 forgot.password=Mot de passe oubli\u00e9 ?
 gender.mr=M.
 gender.mrs=Mme
@@ -52,9 +57,9 @@ message.about=A propos de Travaux et Services
 message.about.text=Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer une annonce gratuite ou consulter nos petites annonces dans différentes catégories... bla bla bla.
 message.email.address.already.exists=Un compte correspondant à cette adresse e-mail existe déjà
 message.ad.online.subject=Votre annonce «{0}» est en ligne
-message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
-message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
-message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous \u00eatre enregistr\u00e9 sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
+message.ad.online.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Votre annonce «{0}» vient d''\u00eatre valid\u00e9e pour \u00eatre mise en ligne sur le site travauxetservices.fr.<br>Votre annonce sera visible en cliquant sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L''\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
+message.user.account.subject=Confirmation d''inscription sur Travaux et Services : bienvenue !
+message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous \u00eatre enregistr\u00e9 sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L''\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 published.by=Par
 published=Publi\u00e9 le
 rating.above=Bien
@@ -67,7 +72,6 @@ rating.poor=M\u00e9diocre
 rating.price=Rapport Qualit\u00e9 / Prix
 rating.quality=Qualit\u00e9 de la prestation
 rating.reception=Accueil
-registration=Inscription
 remuneration.day.short=Journ\u00e9e
 remuneration.day=à la journ\u00e9e
 remuneration.exchange.short=Echange
@@ -77,11 +81,12 @@ remuneration.part=aux pi\u00e8ces
 remuneration.task.short=Tâche
 remuneration.task=à la tâche
 remuneration.time.short=Heure
-remuneration.time=de l'heure
+remuneration.time=de l''heure
+sign.in=Se connecter
+sign.out=Se Déconnecter
 submenu.abount=À propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
-title=Travaux & Services
 user.confirmation=Confirmation
 user.created=Cr\u00e9\u00e9
 user.email=Email
@@ -101,3 +106,7 @@ validator.confirm.password=la confirmation doit être identique au mot de passe
 validator.email=l''adresse e-mail n''est pas valide
 validator.required=ce champ est obligatoire
 validator.terms=Vous devez accepter les conditions générales
+window.connection=Connexion
+window.contact=Message
+window.forgot=Mot de passe oubli\u00e9
+window.registration=Inscription
