--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -21,6 +21,7 @@ button.registration=Free registration
 button.save=Save
 button.search=Search
 button.send=Send
+button.upload=Upload
 button.validate=Validate
 check.newsletter=Free sign up to the newsletter travauxetservices.fr
 check.terms=I have read and agree the <a href="/#!terms">terms and conditions</a>
@@ -88,6 +89,8 @@ submenu.abount=Timely
 submenu.administration=Administration
 submenu.my.account=My account
 user.confirmation=Confirmation
+upload.imege=Upload the image here
+uploaded.image=Uploaded Image
 user.created=Created
 user.email=Email
 user.firstName=FirstName
@@ -109,4 +112,5 @@ validator.terms=You must accept the terms and conditions
 window.connection=Connection
 window.contact=Message
 window.forgot=Forgot your password
+window.picture=Picture
 window.registration=Registration
