--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -21,6 +21,7 @@ button.registration=Inscription gratuite
 button.save=Sauvegarder
 button.search=Chercher
 button.send=Envoyer
+button.upload=Télécharger
 button.validate=Valider
 check.newsletter=Je m''inscris gratuitement à la newsletter de travauxetservices.fr
 check.terms=J''ai lu et j''accepte les <a href="/#!terms">conditions générales</a>
@@ -87,6 +88,8 @@ sign.out=Se Déconnecter
 submenu.abount=À propos
 submenu.administration=Administration
 submenu.my.account=Mon compte
+upload.imege=Téléchargez l'image ici
+uploaded.image=Image téléchargée
 user.confirmation=Confirmation
 user.created=Cr\u00e9\u00e9
 user.email=Email
@@ -109,4 +112,5 @@ validator.terms=Vous devez accepter les conditions générales
 window.connection=Connexion
 window.contact=Message
 window.forgot=Mot de passe oubli\u00e9
+window.picture=Image
 window.registration=Inscription
