--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -15,6 +15,7 @@ application.title.logo=<strong>Works</strong> and <strong>Services</strong>
 button.cancel=Cancel
 button.change=Change
 button.contact=Contact by email
+button.post=Post ad
 button.edit=Edit
 button.phone=View phone
 button.registration=Free registration
@@ -43,7 +44,7 @@ input.remuneration=Remuneration
 menu.about=About Us
 menu.account=My account
 menu.configuration=Configuration
-menu.deposit=Placing an ad
+menu.post=Placing an ad
 menu.home=Welcome
 menu.information=Legal Information
 menu.offers=Offers
