--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -15,6 +15,7 @@ application.title.logo=<strong>Travaux</strong> et <strong>Services</strong>
 button.cancel=Annuler
 button.change=Modifier
 button.contact=Contacter par email
+button.post=Publier cette annonce
 button.edit=Editer
 button.phone=Afficher le téléphone
 button.registration=Inscription gratuite
@@ -43,7 +44,7 @@ input.remuneration=R\u00e9mun\u00e9ration
 menu.about=Qui sommes-nous
 menu.account=Mon compte
 menu.configuration=Configuration
-menu.deposit=D\u00e9poser une annonce
+menu.post=D\u00e9poser une annonce
 menu.home=Accueil
 menu.information=Infos l\u00e9gales
 menu.offers=Offres
