--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -76,6 +76,10 @@ rating.quality=Quality of service
 rating.reception=Reception
 remuneration.day.short=Day
 remuneration.day=at day
+remuneration.week.short=Week
+remuneration.week=by week
+remuneration.month.short=Month
+remuneration.month=monthly
 remuneration.exchange.short=Exchange
 remuneration.exchange=exchange
 remuneration.part.short=Parts
@@ -84,6 +88,8 @@ remuneration.task.short=Task
 remuneration.task=a task
 remuneration.time.short=Time
 remuneration.time=time
+remuneration.half.short=Half time
+remuneration.half=half time
 sign.in=Sign In
 sign.out=Sign Out
 submenu.abount=Timely
