--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -76,6 +76,10 @@ rating.quality=Qualit\u00e9 de la prestation
 rating.reception=Accueil
 remuneration.day.short=Journ\u00e9e
 remuneration.day=à la journ\u00e9e
+remuneration.week.short=Semaine
+remuneration.week=à la semaine
+remuneration.month.short=Mois
+remuneration.month=au mois
 remuneration.exchange.short=Echange
 remuneration.exchange=\u00e9change
 remuneration.part.short=Pi\u00e8ces
@@ -84,6 +88,8 @@ remuneration.task.short=Tâche
 remuneration.task=à la tâche
 remuneration.time.short=Heure
 remuneration.time=de l''heure
+remuneration.half.short=Demi-heure
+remuneration.half=à la demi-heure
 sign.in=Se connecter
 sign.out=Se Déconnecter
 submenu.abount=À propos
