--- a/src/main/resources/i18n/messages_en_GB.properties
+++ b/src/main/resources/i18n/messages_en_GB.properties
@@ -36,9 +36,12 @@ forgot.password=Forgot your password?
 gender.mr=Mr.
 gender.mrs=Mrs.
 gender.ms=Ms.
+header.published=Published
+header.location=Location
+header.title=Ad
 input.categories=Activities
 input.city=City/Zip Code
-input.division=Region/Department
+input.location=Region/Department
 input.keyword.optional=Keyword(s) key(s) - optional
 input.remuneration=Remuneration
 menu.about=About Us
@@ -63,7 +66,6 @@ message.ad.online.text=<html><head><title>Travaux et Services</title></head><bod
 message.user.account.subject=Confirmation d'inscription sur Travaux et Services : bienvenue !
 message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous être enregistré sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L'équipe travauxetservices.fr<br>Ce message a été envoyé automatiquement. Nous vous remercions de ne pas répondre.</body></html>
 published.by=By
-published=Published
 rating.above=Above average
 rating.advice=Advice
 rating.availability=Availability
@@ -108,6 +110,7 @@ user.lastname=LastName
 user.password=Password
 user.phone=Phone
 user.picture=Picture
+user.pro=Pro.
 user.professional=Professional
 user.professional.question=Are you a professional?
 user.role=Role
