--- a/src/main/resources/i18n/messages_fr_FR.properties
+++ b/src/main/resources/i18n/messages_fr_FR.properties
@@ -36,9 +36,12 @@ forgot.password=Mot de passe oubli\u00e9 ?
 gender.mr=M.
 gender.mrs=Mme
 gender.ms=Mlle.
+header.published=Publi\u00e9 le
+header.location=Localisation
+header.title=Annonce
 input.categories=Activit\u00e9s
 input.city=Ville/Code postal
-input.division=R\u00e9gion/D\u00e9partement
+input.location=R\u00e9gion/D\u00e9partement
 input.keyword.optional=Mot(s) cl\u00e9(s) - optionnel
 input.remuneration=R\u00e9mun\u00e9ration
 menu.about=Qui sommes-nous
@@ -63,7 +66,6 @@ message.ad.online.text=<html><head><title>Travaux et Services</title></head><bod
 message.user.account.subject=Confirmation d''inscription sur Travaux et Services : bienvenue !
 message.user.account.text=<html><head><title>Travaux et Services</title></head><body>Bonjour,<br>Merci de vous \u00eatre enregistr\u00e9 sur le site travauxetservices.fr.<br>Vous avez maintenant un compte du nom de «{0}»<br>Pour finaliser votre inscription, nous vous invitons à cliquer sur le lien suivant :<br><a href="{1}">{1}</a><br><br>Cordialement,<br>L''\u00e9quipe travauxetservices.fr<br>Ce message a \u00e9t\u00e9 envoy\u00e9 automatiquement. Nous vous remercions de ne pas r\u00e9pondre.</body></html>
 published.by=Par
-published=Publi\u00e9 le
 rating.above=Bien
 rating.advice=Conseils
 rating.availability=Disponibilit\u00e9
@@ -108,6 +110,7 @@ user.lastname=Nom
 user.password=Mot de passe
 user.phone=T\u00e9l\u00e9phone
 user.picture=Image
+user.pro=Pro.
 user.professional=Professionnel
 user.professional.question=Etes-vous un professionnel ?
 user.role=Rôle
